syntax = "proto3";

package test.integration.filters;

import "validate/validate.proto";

message TestNetworkFilterConfig {
}

message TestDrainerNetworkFilterConfig {
  uint32 bytes_to_drain = 1 [(validate.rules).uint32 = {gte: 2}];
}
